refactor: style separe header, footer & cards

--- a/pages/characters.html
+++ b/pages/characters.html
@@ -14,17 +14,17 @@
                 <a href="../index.html">
                     Home
                 </a>
-                <a href="pages/characters.html">
+                <a href="characters.html">
                     Characters
                 </a>
-                <a href="pages/planets.html">
+                <a href="planets.html">
                     Planets
                 </a>
             </nav>
         </header>
         <main>
             <div id="charactersection" class="displayCards">
-adadw
+                
             </div>
         </main>
         <footer>
