fix: size of planet cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1 class="title" id="title">Dragon Ball Api Page</h1>
+            <h1 class="title" id="title">Dragon Ball Characters</h1>
             <nav>
                 <a href="index.html">
                     Characters
