--- a/pages/planets.html
+++ b/pages/planets.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1 class="title">Dragon Ball Api Page</h1>
+            <h1 class="title">Dragon Ball Planets</h1>
             <nav>
                 <a href="../index.html">
                     Characters
