fix: fix root of elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
@@ -14,7 +14,7 @@
                 <a href="index.html">
                     Characters
                 </a>
-                <a href="/pages/planets.html">
+                <a href="./pages/planets.html">
                     Planets
                 </a>
             </nav>
@@ -29,20 +29,20 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="ynotvigna@gmail.com">
-                                <img src="../img/gmailLogo.png" alt="">
+                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZZPzMZrvVkkkXDQXxlLpbZHTFggCxQQXgVpDRDHnPpVrmhFCjLCtXrMZsRVhSNftFDnhL">
+                                <img src="./img/gmailLogo.png" alt="">
                                 ynotvigna
                             </a>
                         </td>
                         <td>
                             <a href="https://github.com/SantiVigna">
-                                <img src="../img/githubLogo.png" alt="">
+                                <img src="./img/githubLogo.png" alt="">
                                 SantiVigna_
                             </a>
                         </td>
                         <td>
                             <a href="https://www.instagram.com/santivigna_/">
-                                <img src="../img/instagramLogo.png" alt="">
+                                <img src="./img/instagramLogo.png" alt="">
                                 SantiVigna_
 
                             </a>
