--- a/pages/planets.html
+++ b/pages/planets.html
@@ -29,7 +29,7 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="ynotvigna@gmail.com">
+                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZZPzMZrvVkkkXDQXxlLpbZHTFggCxQQXgVpDRDHnPpVrmhFCjLCtXrMZsRVhSNftFDnhL">
                                 <img src="../img/gmailLogo.png" alt="">
                                 ynotvigna
                             </a>
